# skriuw

./: ## Introduction.md  .cleanup-summary.md  .dockerignore  .env  .env.backup  .env.example  .env.new  .env.old  .gitignore  .mcp.json  .oxfmtrc.json  .prettierignore  .prettierrc  .prettierrc.json  .vercelignore  AGENTS.md  API_ARCHITECTURE.md  API_AUDIT.md  ARCHITECTURE.md  ARCHITECTURE_AUDIT.md  BUBBLE_MENU_FIX.md  CHANGELOG.md  CLAUDE.md  CLEANUP_REPORT.md  CLI_GUIDE.md  CLI_MANAGER_SUMMARY.md  COMPARISON.md  DATABASE_SETUP.md  Dockerfile  EDITOR_MIGRATION_SUMMARY.md  ENV_SETUP.md  FEATURE_SUMMARY.md  FNC_TO_OPTIMIZE.md  FOLDERS_FEATURE_DOC.md  GEMINI.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  LOCALSTORAGE_TO_DRIZZLE_MIGRATION.md  MENTION_FEATURE_GUIDE.md  (+83 more)
..git/: config  index  packed-refs
.agent/: Gemini.md
.cursor/: core-api-pattern.mdc
.servo/: preferences.json
.vercel/: project.json
__tests__/: bun-test.d.ts
api/: index.ts  package.json  tsconfig.json
apps/web/src-tauri/: Cargo.toml  README.md  com.skriuw.app.metainfo.xml  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/src/: main.rs
client/: App.tsx  global.css
docs/: ADAPTER_MIGRATION_EXAMPLE.md  AGENT_TASKS.md  DRIZZLE.md  DRIZZLE_ARCHITECTURE.md  NON_BLOCKING_LOADING_ARCHITECTURE.md  POSTGRES_MIGRATION.md  SCHEMA_EXPLANATION.md  SCHEMA_SUMMARY.md  SPEC.md  STORAGE_ADAPTER_GUIDE.md  STORAGE_STATUS.md  VERCEL_DEPLOYMENT.md  analytics.md  app-structure-audit-agent-plan.md  app-structure-audit-report.md  audit-dashboard.html  (+5 more)
(+2671 files in other folders)
