[package]
name = "skriuw-desktop"
version = "0.1.0"
authors = ["Skriuw Team"]
edition = "2021"
description = "Desktop build for the Skriuw application"
license = "MIT"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
